samples/_failures_safe/1761453102_c5325d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d600db68.c: In function ‘main’:
./samples/SAFE/__tmp_d600db68.c:151:21: error: expected declaration or statement at end of input
  151 |                     printf("Invalid matrix input\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_d600db68.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d600db68.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d600db68.c:151:21: error: expected declaration or statement at end of input
